--- a/AugMeal/res/layout/activity_info.xml
+++ b/AugMeal/res/layout/activity_info.xml
@@ -12,6 +12,18 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:text="Press for Next Activity"
+        android:onClick="clicked" />
 
 </RelativeLayout>
