--- a/AugMeal/res/layout/list_row.xml
+++ b/AugMeal/res/layout/list_row.xml
@@ -16,7 +16,6 @@
         android:layout_marginRight="5dip" >
  
         <ImageView
-            android:contentDescription="Venue Image"
             android:id="@+id/list_image"
             android:layout_width="50dip"
             android:layout_height="50dip" />
@@ -30,7 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/thumbnail"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Venue Title Stub"
         android:textColor="#040404"
         android:typeface="sans"
         android:textSize="15sp"
@@ -45,12 +43,11 @@
         android:textColor="#343434"
         android:textSize="12sp"
         android:layout_marginTop="1dip"
-        android:layout_toRightOf="@+id/thumbnail"
-        android:text="Description Stub" />
+        android:layout_toRightOf="@+id/thumbnail" />
  
 
+    <!-- Arrow -->
     <ImageView 
-        android:contentDescription="Arrow"
         android:layout_width="20dip"
         android:layout_height="20dip"
         android:src="@drawable/arrow"
