--- a/AugMeal/res/layout/list_row.xml
+++ b/AugMeal/res/layout/list_row.xml
@@ -45,12 +45,20 @@
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail" />
  
-
     <!-- Arrow -->
-    <ImageView 
+    <ImageView
+        android:id="@+id/arrow"
         android:layout_width="20dip"
         android:layout_height="20dip"
         android:src="@drawable/arrow"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"/>
+    
+        <!-- Menu Button -->
+    <ImageView 
+        android:layout_width="20dip"
+        android:layout_height="20dip"
+        android:src="@drawable/menu_available"
+        android:layout_toLeftOf="@id/arrow"
         android:layout_centerVertical="true"/>
 </RelativeLayout>
