Fixing project and seem to have lost a file

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_margin="30dp"
-        android:background="@drawable/rounded" >
+        android:layout_margin="30dp" >
 
         <ImageView
             android:id="@+id/loc_pin"
